[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail",email = "michail_gromov@vortex.foundation"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
